fix for text overflow

--- a/src/scenes/Home/IntroSection/IntroSection.module.scss
+++ b/src/scenes/Home/IntroSection/IntroSection.module.scss
@@ -31,6 +31,8 @@
     font-size: 1.3rem;
     text-align: left;
     line-height: 1.8rem;
+    flex:1;
+    
     width: flex;
     p {
       margin: 2rem;
